--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html {
     height: 100%;
 }
 
-body {
+html, body {
     color: #302E2B;
     font-size: 11pt;
     display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
