--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,9 +3,15 @@
 /* GENERAL STYLES */
 html {
     height: 100%;
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    display: flex; 
+    flex-flow: column;
 }
 
-html, body {
+body {
     color: #302E2B;
     font-size: 11pt;
     display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
