--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,8 @@ a.menu:LINK, a.menu:VISITED {
     display: flex;
     align-items: center;
     justify-content: center;
+    -webkit-flex-flow: row;
+     flex-flow: row;
     width: 100%;
     min-height: 100%;
     text-align: center;
