--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,8 +119,6 @@ a.menu:LINK, a.menu:VISITED {
     display: flex;
     align-items: center;
     justify-content: center;
-    -webkit-flex-flow: row;
-     flex-flow: row;
     width: 100%;
     min-height: 100%;
     text-align: center;
@@ -135,6 +133,7 @@ a.menu:LINK, a.menu:VISITED {
 
     #green, #rooibos, #black, #puerh {
         color: #F4F1EA;
+        display: inline-block;
     }
 
     #herbal {
