--- a/jon/style.css
+++ b/jon/style.css
@@ -15,6 +15,7 @@ body {
     font-size: 100pt;
     text-align: center;
     width: 100%; 
+    display: none;
 }
 
 #letter {
@@ -24,6 +25,7 @@ body {
     text-align: left;
     width: 100%;   
     text-indent: 40px;
+    display: none;
 }
 
 .signature {
