--- a/jon/style.css
+++ b/jon/style.css
@@ -36,6 +36,7 @@ body {
 a:link, a:visited {
     text-decoration:none;
     font-style: italic;
+    transition: linear 0.2s;
     color: #1693A5;
 }
 
