--- a/website/style.css
+++ b/website/style.css
@@ -1,123 +1,193 @@
+/* COLORS 
+* Red: #CE513E;
+* Yellow: #E9B13D;
+* Teal: #93C6A2;
+* Blue: #3E5167;
+* Beige: #F5F4BE;
+# Dark blue: #212E3C;
+*/
 
-body {
+html, body {
     margin: 0;
     padding: 0;
+    font-size: 12pt;
+    width: 100%;
+    height: 100%;
 }
 
-/* containers */
+#navigation {
+	position: fixed;
+	width: 100%;
+	text-align: right;
+	padding-top: 15px;
+}
 
-    #landing, #work, #play {
-        width: 100%;
-        min-height: 100%;
-    }
+#landing, #work, #play {
+    width: 100%;
+    min-height: 100%;
+}
 
-    .container {
-        max-width: 960px;
-        padding: 30px;
-        margin: 0 auto;
-        text-align: center;
-    }
+#landing {
+    background-color: #CE513E;
+    color: #E9B13D;
+}
 
-    #landing {
-        background-color: #CE513E;
-        color: #E9B13D;
-    }
+#work {
+    background-color: #93C6A2;
+    color: #F5F4BE;
+}
 
-    #work {
-        background-color: #93C6A2;
-        color: #F5F4BE;
-    }
+#play {
+    background-color: #E9B13D;
+    color: #3E5167;
+}
 
-    #play {
-        background-color: #E9B13D;
-        color: #3E5167;
-    }
+/* container formatting */
 
-    .name {
-        font-family: "Montserrat";
-        font-size: 100pt;
-        line-height: 90pt;
-        text-transform: uppercase;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        padding: 60px;
-    }
+.container {
+	width: 95%;
+	max-width: 960px;
+	margin: auto;
+	text-align: center;
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+.narrow {
+	max-width: 500px;
+	margin: auto;
+}
+
+.padding {
+	padding: 30px;
+}
+
+.halfpadding {
+	padding: 15px;
+}
+
+.button {
+	padding-top: 60px;
+	min-height: 70px;
+}
+
+/* image formatting */
+
+.onefifty {
+	width: 150px;
+	height: 150px;
+}
 
 /* text formatting */
 
-    .title {
-        padding-top: 100px;
-        font-family: "Montserrat";
-        font-size: 50pt;
-        text-transform: uppercase; 
-        margin: auto;
-    }
+.montserrat {
+	font-family: "Montserrat";
+	text-transform: uppercase;
+	font-weight: 700;
+}
 
-    .subtitle, .skills, .social, .projects {
-        font-family: "Raleway";
-        font-weight: 300;
-        font-size: 18pt;
-        padding: 20px;
-        max-width: 800px;
-        margin: auto;
-    }
+.raleway {
+	font-family: "Raleway";
+}
 
-    .subtitle {
-        border-bottom: 1px solid;
-    }
+.title {
+	font-size: 100pt;
+	line-height: 90pt;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	padding: 50px;
+}
 
-    .links {
-        padding: 40px;
-        font-size: 18pt;
-    }
+.header {
+	font-size: 50pt;
+}
+
+.subheader {
+	font-size: 18pt;
+}
+
+.withborder {
+	border-bottom: 1px solid;
+	margin: 15px;
+	margin-left: 50px;
+	margin-right: 50px;
+	padding-bottom: 15px;
+}
 
 /* links */
-    
-    a:LINK, a:VISITED {
-        text-decoration: none;
-        font-weight: 700;
-        color: #3E5167;
-    }
 
-    a:HOVER {
-        opacity: 0.6;
-        transition: linear 0.3s;
-    }
-    
-    #navigation {
-        position: fixed;
-        top: 0;
-        left: 0;
-        margin-top: 20px;
-        width: 100%;
-        height: 40px;
-        text-align: right;
-    }
+a:LINK, a:VISITED {
+	text-decoration: none;
+	color: #212E3C;
+	font-weight: 700;
+	transition: linear 0.3s;
+}
 
-    a.nav:LINK, a.nav:VISITED {
-        font-family: "Montserrat";
-        text-transform: uppercase;
-        text-decoration: none;
-        color: #212E3C;
-        padding-right: 40px;   
-        padding-bottom: 10px;
-    }
+a:HOVER {
+	color: #3E5167;
+}
 
-    a.worklink:LINK, a.worklink:VISITED {
-        font-family: "Montserrat";
-        text-transform: uppercase;
-        text-decoration: none;
-        color: #F5F4BE;
-        padding: 30px;
-        padding-left:  40px;
-        padding-right: 40px;
-        margin: 20px;
-        border: 3px #F5F4BE solid;
-    }
+a img:HOVER {
+	opacity: 0.8;
+	transition: linear 0.3s;
+}
 
-    a.worklink:HOVER {
-        background-color: #F5F4BE;
-        color: #93C6A2;
-        opacity: 1;
-    }    
+a.workbutton:LINK, a.workbutton:VISITED {;
+    color: #F5F4BE;
+    padding: 30px;
+    border: 3px #F5F4BE solid;
+}
+
+a.workbutton:HOVER {
+    background-color: #F5F4BE;
+    color: #93C6A2;
+}
+
+/* Media queries for responsive design */
+
+@media (max-width: 800px) {
+  	a.workbutton:LINK, a.workbutton:VISITED {;
+  	    color: #F5F4BE;
+  	    padding: 20px;
+  	    border: 3px #F5F4BE solid;
+  	    font-size: 12pt;
+  	}
+
+  	.header {
+  		font-size: 30pt;
+  	}
+
+  	.subheader {
+  		font-size: 14pt;
+  	}
+
+  	.title {
+  		font-size: 60pt;
+  		line-height: 60pt;
+  	}
+
+} 
+
+@media (max-width: 400px) {
+  	a.workbutton:LINK, a.workbutton:VISITED {;
+  	    color: #F5F4BE;
+  	    padding: 10px;
+  	    border: 3px #F5F4BE solid;
+  	    font-size: 12pt;
+  	}
+
+  	a.workbutton:HOVER {
+  		color: #93C6A2;
+  	}
+
+  	.title {
+  		font-size: 40pt;
+  		line-height: 40pt;
+  		padding: 20px;
+  	}
+
+  	#navigation {
+  		text-align: center;
+  	}
+}  
