--- a/website/style.css
+++ b/website/style.css
@@ -169,7 +169,7 @@ a.workbutton:HOVER {
 
 } 
 
-@media (max-width: 600px) {
+@media (max-width: 400px) {
   	a.workbutton:LINK, a.workbutton:VISITED {;
   	    color: #F5F4BE;
   	    padding: 10px;
@@ -190,4 +190,24 @@ a.workbutton:HOVER {
   	#navigation {
   		text-align: center;
   	}
-}  
+} 
+
+@media (max-width: 300px) {
+    a.workbutton:LINK, a.workbutton:VISITED {;
+        color: #F5F4BE;
+        padding: 8px;
+        border: 3px #F5F4BE solid;
+        font-size: 8pt;
+    }
+
+    a.workbutton:HOVER {
+      color: #93C6A2;
+    }
+
+    .title {
+      font-size: 30pt;
+      line-height: 30pt;
+      padding: 20px;
+    }
+
+} 
