pushing to live for mobile testing 7

--- a/website/style.css
+++ b/website/style.css
@@ -191,6 +191,10 @@ a.workbutton:HOVER {
       padding: 20px;
     }
 
+    .header {
+      font-size: 24pt;
+    }
+
     #navigation {
       text-align: center;
     }
