--- a/website/style.css
+++ b/website/style.css
@@ -195,6 +195,10 @@ a.workbutton:HOVER {
       font-size: 24pt;
     }
 
+    .container {
+      padding-top: 50px;
+    }
+
     #navigation {
       text-align: center;
     }
