--- a/squarespace/style.css
+++ b/squarespace/style.css
@@ -19,6 +19,7 @@ body, html {
 
 span {
 	margin-right: 20px;
+	display: none;
 }
 
 a.nav:LINK, a.nav:VISITED {
@@ -66,12 +67,14 @@ a.nav:HOVER {
 .header {
 	font-size: 48pt;
 	font-weight: 700;
+	display: none;
 }
 
 .subheader {
 	font-size: 18pt;
 	font-style: italic;
 	padding-left: 20px;
+	display: none;
 }
 
 a:LINK, a:VISITED {
@@ -89,6 +92,7 @@ a:HOVER {
 	padding: 40px;
 	margin: auto;
 	line-height: 24px;
+	display: none;
 }
 
 p {
