--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ html, body {
 #landing {
     background-color: #CE513E;
     color: #E9B13D;
+    height: 100%;
+    overflow: none;
 }
 
 #work {
@@ -68,6 +70,7 @@ html, body {
     position: absolute;
     bottom: 50px;
     width: 90%;
+    background-color: #CE513E;
 }
 
 #landingwaypoint, #workwaypoint, #playwaypoint {
