--- a/new-site/css/_general.scss
+++ b/new-site/css/_general.scss
@@ -8,7 +8,7 @@ body, html {
 	padding: 0;
 }
 
-p {
+p, i, ul, ol {
 	font-family: $font-body;
 	font-weight: $font-light;
 	font-size: $font-body-size;
@@ -56,7 +56,7 @@ h3 {
 
 h4 {
 	@extend h3;
-	font-weight: $font-light;
+	text-transform: none;
 }
 
 
