--- a/new-site/css/about.css
+++ b/new-site/css/about.css
@@ -12,7 +12,7 @@ body, html {
   margin: 0;
   padding: 0; }
 
-p {
+p, i, ul, ol {
   font-family: "Signika", sans-serif;
   font-weight: 300;
   font-size: 1em; }
@@ -34,7 +34,7 @@ a:hover {
 h1, h2 {
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.05em;
   font-size: 1.8em; }
 
 h2 {
@@ -47,7 +47,7 @@ h3, h4 {
   margin: 0; }
 
 h4 {
-  font-weight: 300; }
+  text-transform: none; }
 
 /* Background Colors */
 .pink {
@@ -80,7 +80,7 @@ a.button:link, a.button:visited, a.button:active {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.05em;
   color: #37393D;
   padding: 10px;
   border: 2px #37393D solid;
@@ -116,13 +116,13 @@ a.button:hover {
   margin: 0 auto; }
   .container.with-padding {
     padding: 50px 0; }
-  @media all and (max-width: 800px) {
+  @media all and (max-width: 900px) {
     .container {
       width: 90%; } }
 
 .content, .box {
   margin: 50px 0 0 0; }
-  @media all and (max-width: 800px) {
+  @media all and (max-width: 900px) {
     .content.first-item, .first-item.box {
       margin: 7% 0; } }
 
@@ -137,11 +137,15 @@ a.button:hover {
   width: 80%; }
 
 /* Resume */
+.resume-item {
+  margin-top: 0;
+  margin-bottom: 30px; }
+
 .box {
   margin: 50px auto;
   width: 50%;
   text-align: center; }
-  @media all and (max-width: 800px) {
+  @media all and (max-width: 900px) {
     .box {
       width: 80%; } }
 
@@ -160,7 +164,7 @@ a.button:hover {
   vertical-align: top;
   text-align: left;
   border-right: 1px solid; }
-  @media all and (max-width: 800px) {
+  @media all and (max-width: 900px) {
     .left-half, .right-half {
       width: 100%;
       display: block;
@@ -171,7 +175,7 @@ a.button:hover {
 .right-half {
   border: none;
   padding: 0 0 0 30px; }
-  @media all and (max-width: 800px) {
+  @media all and (max-width: 900px) {
     .right-half {
       padding: 30px 0 0 0; } }
 
@@ -181,11 +185,36 @@ a.button:hover {
   height: 0;
   padding-bottom: 25%;
   float: left;
-  margin: 0; }
-  @media all and (max-width: 800px) {
+  margin: 0;
+  overflow: none; }
+  @media all and (max-width: 900px) {
     .square {
       width: 50%;
       height: 0;
       padding-bottom: 50%; } }
+
+.overlay {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  opacity: 0.5;
+  margin: 0; }
+
+/* Specific Photos */
+.bookshelves {
+  background: URL("../about/images/bookshelves.png");
+  background-size: 100%; }
+
+.glasses {
+  background: URL("../about/images/glasses.png");
+  background-size: 100%; }
+
+.grass {
+  background: URL("../about/images/grass.png");
+  background-size: 100%; }
+
+.sea {
+  background: URL("../about/images/sea.png");
+  background-size: 100%; }
 
 /*# sourceMappingURL=about.css.map */
