--- a/new-site/css/_variables.scss
+++ b/new-site/css/_variables.scss
@@ -18,10 +18,11 @@ $font-title: 'Montserrat', sans-serif;
 $font-body: 'Signika', sans-serif;
 $font-light: 300;
 $font-bold: 700;
-$font-body-size: 1em;
-$font-title-size: 1.8em;
+$font-body-size: 1.05em;
+$font-title-size: 1.6em;
 $font-subtitle-size: 1em;
 $font-title-letter-spacing: 0.05em;
+$line-height: 1.5em;
 
 /* Breakpoints */
 
