--- a/new-site/css/_general.scss
+++ b/new-site/css/_general.scss
@@ -6,12 +6,16 @@ body, html {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	font-family: $font-body;
+	font-size: $font-body-size;
 }
 
-p, i, ul, ol {
-	font-family: $font-body;
-	font-weight: $font-light;
-	font-size: $font-body-size;
+p {
+	line-height: $line-height;
+}
+
+b, strong {
+	font-weight: $font-bold;
 }
 
 a:link, a:visited, a:active {
@@ -51,10 +55,16 @@ h3 {
 	font-family: $font-body;
 	text-transform: uppercase;
 	font-size: $font-subtitle-size;
+	line-height: $line-height;
 	margin: 0;
 }
 
 h4 {
+	@extend h3;
+	font-weight: $font-light;
+}
+
+h5 {
 	@extend h3;
 	text-transform: none;
 }
