--- a/new-site/css/home.scss
+++ b/new-site/css/home.scss
@@ -6,57 +6,64 @@
 @import "_containers.scss";
 
 /* Containers */
-
 .intro {
-	min-height: 70%;
+	height: 75%;
+	text-align: center;
 }
 
-.clearfix {
-	width: 100%;
-	height: $clearfix;
+.castle {
+	width: 95%;
+	max-width: 360px;
+	margin-top: $clearfix;
 }
 
-.blurb {
-	position: absolute;
-	top: 20%;
-	left: 10%;
-	width: 80%;
+.extra-padding {
+	padding: $box-padding 0;
 }
 
 /* Images */
 
 .photo {
 	width: 100%;
-	min-width: 240px;
-	height: 200px;
-	margin: 0 0 $box-margin 0;
+	height: 240px;
+	margin-bottom: $box-padding;
 }
 
 .overlay {
-	width: 100%;
-	min-width: 240px;
-	height: 200px;
+	width:100%;
+	height: 100%;
+	opacity: 0.6;
 	margin: 0;
-	opacity: 0.8;
+}
+
+@mixin background-dimensions() {
+	background-size: 150%;
+	background-repeat: no-repeat;
+	background-position: center center;
+	@media all and (max-width: $mobile) {
+		background-position: center bottom;
+	}
 }
 
 .shapeways {
-	background: URL("../images/shapeways.png") center center;
-	background-size: 100%;
+	background: URL("../images/shapeways.png");
+	@include background-dimensions();
 }
 
 .wonder {
 	background: URL("../images/wonder.png");
-	background-size: 100%;
+		@include background-dimensions();
 }
 
 .innod {
-	background: URL("../images/innod.png") center center;
-	background-size: 100%;
+	background: URL("../images/innod.png");
+	@include background-dimensions();
+
 }
 
 .other {
-	background: URL("../images/other.png") center center;
+	background: URL("../images/other.png");
+	@include background-dimensions();
 	background-size: 100%;
 }
 
