adding innod and wonder

--- a/new-site/css/about.css
+++ b/new-site/css/about.css
@@ -125,7 +125,7 @@ a.button:hover, a.button:active {
     .footer {
       width: 95%; } }
 
-.social-media {
+.social {
   margin: 10px;
   width: 5%; }
 
