--- a/new-site/css/work.css
+++ b/new-site/css/work.css
@@ -107,13 +107,42 @@ a.button:hover, a.button:active {
     color: #7BB7B4; }
 
 /* Menu */
+#menu {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: none;
+  text-align: center; }
+
 .menu-link-div {
   position: fixed;
   top: 0;
-  right: 0; }
+  right: 0;
+  transition: linear 0.2s; }
 
 .menu-link {
   padding: 10px; }
+
+.menu-items {
+  line-height: 2em;
+  padding: 10px; }
+
+a.menu-item:link, a.menu-item:visited {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #37393D;
+  font-size: 1.6em;
+  margin: 10px; }
+
+a.menu-item:hover, a.menu-item:active {
+  border-bottom: 2px #37393D solid; }
+
+.waypoint-pink, .waypoint-gray, .waypoint-yellow, .waypoint-blue {
+  width: 100%;
+  height: 0px; }
 
 /* Footer */
 .footer {
@@ -157,7 +186,7 @@ a.button:hover, a.button:active {
 
 .title {
   width: 50%;
-  padding: 100px;
+  padding: 100px 0;
   margin: 0 auto;
   text-align: center; }
 
