--- a/new-site/css/home.css
+++ b/new-site/css/home.css
@@ -143,15 +143,17 @@ a.menu-icon {
   color: #37393D; }
 
 .menu-items {
+  margin-top: 10%;
   line-height: 2em;
   padding: 10px; }
 
 a.menu-item:link, a.menu-item:visited {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
+  letter-spacing: 0.05em;
   text-transform: uppercase;
   color: #37393D;
-  font-size: 1.6em;
+  font-size: 1em;
   margin: 10px; }
 
 a.menu-item:hover, a.menu-item:active {
@@ -264,6 +266,18 @@ a.menu-item:hover, a.menu-item:active {
   @media all and (max-width: 500px) {
     .innod {
       background-position: center bottom; } }
+
+.lily-livered {
+  background: URL("../images/lily-livered.png");
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center center; }
+  @media all and (max-width: 500px) {
+    .lily-livered {
+      background-position: center bottom; } }
+  @media all and (max-width: 500px) {
+    .lily-livered {
+      background-position: center center; } }
 
 .other {
   background: URL("../images/other.png");
