--- a/new-site/css/about.scss
+++ b/new-site/css/about.scss
@@ -88,24 +88,24 @@
 /* Specific Photos */
 
 .bookshelves {
-	background: URL("../about/images/bookshelves.png");
+	background: URL("../about/images/bookshelves.jpg");
 	background-size: 100%;
 }
 
 
 .glasses {
-	background: URL("../about/images/glasses.png");
+	background: URL("../about/images/glasses.jpg");
 	background-size: 100%;
 }
 
 
 .grass {
-	background: URL("../about/images/grass.png");
+	background: URL("../about/images/grass.jpg");
 	background-size: 100%;
 }
 
 
 .sea {
-	background: URL("../about/images/sea.png");
+	background: URL("../about/images/sea.jpg");
 	background-size: 100%;
 }
