--- a/new-site/css/home.css
+++ b/new-site/css/home.css
@@ -114,7 +114,8 @@ a.button:hover, a.button:active {
   top: 0;
   right: 0;
   display: none;
-  text-align: center; }
+  text-align: center;
+  opacity: 0.95; }
 
 #menu-link-div {
   position: fixed;
@@ -176,6 +177,9 @@ a.menu-item:hover, a.menu-item:active {
 .social {
   margin: 10px;
   width: 5%; }
+  @media all and (max-width: 500px) {
+    .social {
+      width: 15%; } }
 
 /* Containers */
 .background {
@@ -241,8 +245,8 @@ a.menu-item:hover, a.menu-item:active {
   margin: 0; }
 
 .shapeways {
-  background: URL("../images/shapeways.png");
-  background-size: 150%;
+  background: URL("../images/shapeways.jpg");
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center; }
   @media all and (max-width: 500px) {
@@ -250,8 +254,8 @@ a.menu-item:hover, a.menu-item:active {
       background-position: center bottom; } }
 
 .wonder {
-  background: URL("../images/wonder.png");
-  background-size: 150%;
+  background: URL("../images/wonder.jpg");
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center; }
   @media all and (max-width: 500px) {
@@ -259,8 +263,8 @@ a.menu-item:hover, a.menu-item:active {
       background-position: center bottom; } }
 
 .innod {
-  background: URL("../images/innod.png");
-  background-size: 150%;
+  background: URL("../images/innod.jpg");
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center; }
   @media all and (max-width: 500px) {
@@ -268,8 +272,8 @@ a.menu-item:hover, a.menu-item:active {
       background-position: center bottom; } }
 
 .lily-livered {
-  background: URL("../images/lily-livered.png");
-  background-size: 150%;
+  background: URL("../images/lily-livered.jpg");
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center; }
   @media all and (max-width: 500px) {
@@ -280,8 +284,8 @@ a.menu-item:hover, a.menu-item:active {
       background-position: center center; } }
 
 .other {
-  background: URL("../images/other.png");
-  background-size: 150%;
+  background: URL("../images/other.jpg");
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 100%; }
