--- a/css/about.css
+++ b/css/about.css
@@ -236,9 +236,9 @@ a.menu-item:hover, a.menu-item:active {
   padding: 30px; }
   .box-content.text-left {
     text-align: left; }
-  .box-content.margin {
-    margin: 30px;
-    padding: 30px; }
+  @media all and (min-width: 900px) {
+    .box-content.margin {
+      margin: 30px; } }
   .box-content.text-center {
     text-align: center; }
 
