--- a/css/home.css
+++ b/css/home.css
@@ -213,8 +213,7 @@ a.menu-item:hover, a.menu-item:active {
 
 /* Header */
 .header {
-  height: 40%;
-  min-height: 475px; }
+  min-height: 40%; }
 
 .title {
   width: 50%;
