--- a/css/_containers.scss
+++ b/css/_containers.scss
@@ -36,12 +36,15 @@
 
 /* Header */
 .header {
-	min-height: 40%;
+	min-height: 485px;
 }
 
 .title {
 	width: 50%;
-	padding: 100px 0;
+	padding: 10% 0;
+	@media all and (max-width: $tablet) {
+		padding: 100px 0;
+	}
 	margin: 0 auto;
 	text-align: center;
 }
