--- a/css/_buttons.scss
+++ b/css/_buttons.scss
@@ -12,7 +12,7 @@ a.button:link, a.button:visited, {
 	text-transform: uppercase;
 	letter-spacing: $font-title-letter-spacing;
 	color: $dark-gray;
-	padding: 15px;
+	padding: 10px 14px;
 	border: 2px $dark-gray solid;
 	display: block;
 }
