--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -1,4 +1,4 @@
-/* Menu */
+/* Menu Link */
 
 #menu {
 	width: 100%;
@@ -37,6 +37,8 @@
 	}
 }
 
+/* Menu */
+
 a.menu-icon {
 	font-family: $font-title;
 	color: $dark-gray;
@@ -70,4 +72,18 @@ a.menu-item:hover, a.menu-item:active {
 .waypoint-pink, .waypoint-gray, .waypoint-yellow, .waypoint-blue {
 	width: 100%;
 	height: 0px;
+}
+
+/* Cloud */
+
+.cloud {
+	width: 75px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	padding: $small;
+	z-index: 999;
+	img {
+		width: 100%;
+	}
 }
