--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -81,6 +81,7 @@ a.menu-item:hover, a.menu-item:active {
 	display: block;
 	padding: $small;
 	margin: auto;
+	border: none;
 	img {
 		width: 100%;
 		border: none;
